# SimpleOpenGLDemo

./: CMakeLists.txt  README.md
depend/lib/: freeglutd.lib
resource/shaders/blinn_phong/: fragment.glsl  vertex.glsl
src/: OBJ_Loader.hpp  Shader.hpp  main.cpp
